# pypetal

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  build_dep.sh  build_plike.sh  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_rtd.txt  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  environment.yml  index.rst  installation.rst  javelin_toc.rst  mica2_toc.rst  pl_args.rst  pl_files.rst  pl_output.rst  pyroa_toc.rst  refs.bib  requirements.txt
docs/_static/: custom.css
docs/notebooks/: all_together.ipynb  bibliography.ipynb  detrending.ipynb  drw_rej.ipynb  from_bash.ipynb  from_file.ipynb  javelin.ipynb  load.ipynb  plike.ipynb  pyccf.ipynb  pyzdcf.ipynb  weighting.ipynb
docs/python/: detrend.rst  drw_fit.rst  drw_rej.rst  javelin.rst  load.rst  modules.rst  pipeline.rst  plot.rst  pyccf.rst  pyroa.rst  pyzdcf.rst  weighting.rst
docs/source/: conf.py  index.rst  requirements.txt
examples/dat/: rm017_cont.txt  rm017_hb.txt
plike_v4/: plike_v4.0.f90
src/petl/: PYCCF.py  ___init__.py  __init__.py  drw_funcs.py  modules.py  pipeline.py  plotting.py  pyccf.py  utils.py
src/pypetal/: __init__.py  defaults.py  detrending.py  drw_funcs.py  formatting.py  load.py  modules.py  petalio.py  pipeline.py  plotting.py  pyccf.py  pyroa_funcs.py  utils.py  weighting.py
src/pypetal/utils/: load.py  (+4 more)
tests/: all_module_test.py  detrend_test.py  drw_rej_test.py  general_test.py  javelin_fixed_test.py  javelin_pmap_test.py  javelin_test.py  javelin_together_test.py  load_test.py  plike_test.py  pyccf_test.py  pyzdcf_test.py  together_load_test.py  use_for_javelin_test.py  weighting_test.py
tests/test_all/: all_module_test.py  all_module_together_test.py
tests/test_drw_rej/: drw_rej_test.py  rejection_test.py  use_for_javelin_test.py
tests/test_javelin/: javelin_fixed_test.py  javelin_pmap_test.py  javelin_test.py  javelin_together_test.py
tests/test_load/: indiv_load_test.py  load_javelin_weighting_test.py  load_no_jitter_test.py  load_pyccf_weighting_test.py  load_test.py  together_load_test.py
(+444 files in other folders)
